# promptforge

./: .env.example  README.md  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
agents/multicloud-secure-architect/: README.md
agents/multicloud-secure-architect/docs/: CHANGELOG.md
configs/: example_agent.yaml
docs/: Cloud_Solution_Whitepaper_Template.docx
personas/: Cloud Solution Architect - GOV-DoD-Optimized System Prompt for GPT Builder.md  aws-azure-cloud-solution-architect.md  azure-cloud-solutions-architect-ai-agent.md  azure-cloud-solutions-architect-ai-agent.yaml  azure-pm-agent-prompt.md  cloud-solution-architect-govt-customers.md  redhat-solutions-architect-agent.yaml
prompts/: DoD Multi-Cloud Secure Solutions.md  GOVDoD-Optimized System Prompt for.md
prompts/dod-zero-trust-specialist/: custom-gpt-system-prompt.md  user-guide.md
prompts/govrfp-response-specialist-config/: README.md
prompts/govrfp-response-specialist-config/docs/: ARTIFACT_CONTRACT.md  COMMAND_CHEATSHEET.md
prompts/govrfp-response-specialist-config/gpt_builder/: CONVERSATION_STARTERS.txt  INSTRUCTIONS.txt  PROFILE.yaml
prompts/govrfp-response-specialist-config/knowledge/: README.md
prompts/rfi-response-specialist/: README.md
scratchpad notes/: I need assistance building a set of.txt  Switching context back to the proje.txt  Using the Azure Cloud Architect per.txt  What is the primary goal of your pr.txt  You are a Cloud Security Architect.txt  You are a Cloud Security Architect2.txt
scripts/: run_agent.py
templates/: project-schedule-template.csv  project-schedule.csv
(+25 files in other folders)
